--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -16,12 +16,10 @@
 title: Yalin Li
 email: zoe.yalin.li@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Yalin Li's personal webpage.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
+twitter_username: yalin_yli
 github_username:  yalinli2
 
 # Build settings
