--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,11 @@ plugins:
   - jekyll-feed
 sass:
   sass_dir: _sass
-include: ['_pages', 'images', 'images/logos']
+include: [
+  '_pages/*',
+  'images/*',
+  'images/logos/*',
+]
 kramdown:
   input: GFM
 
