--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Yalin Li's website
 email: zoe.yalin.li@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Yalin Li's personal webpage.
-baseurl: '/gh-pages' # the subpath of your site, e.g. /blog
-url: 'https://yalinli2.github.io/webpage' # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: '/webpage' # the subpath of your site, e.g. /blog
+url: 'https://yalinli2.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: yalin_yli
 github_username:  yalinli2
 
