--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ plugins:
   - jekyll-feed
 sass:
   sass_dir: _sass
-include: ['_includes', '_layouts', '_pages/*', 'css/*', 'images/*', 'images/logos/*',]
+include: ['_includes', '_layouts', '_pages', '_pages/*', 'css/*', 'images/*', 'images/logos/*',]
 kramdown:
   input: GFM
 
