--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Yalin Li's website
-email: zoe.yalin.li@gmail.com
+title: Yalin's website
+email: mail.yalin.li@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Yalin Li's personal webpage.
+  Yalin's personal webpage.
 baseurl: '/webpage' # the subpath of your site, e.g. /blog
 url: 'https://yalinli2.github.io' # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: yalin_yli
+twitter_username: atyalinli
 github_username:  yalinli2
 
 # Build settings
