minor changes to force rebuild

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -16,7 +16,7 @@
 title: Yalin Li
 email: mailto.yalin.li@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Yalin's personal webpage.
+  Yalin's personal webpage
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: atyalinli
