--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Yalin's website
 email: mail.yalin.li@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Yalin's personal webpage.
+  Yalin's personal webpage
 baseurl: '/webpage' # the subpath of your site, e.g. /blog
 url: 'https://yalinli2.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: atyalinli
