--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ plugins:
   - jekyll-feed
 sass:
   sass_dir: _sass
-include: ['_includes', '_layouts', _pages']
+include: [_pages']
 kramdown:
   input: GFM
 
