--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Yalin's website
 email: mail.yalin.li@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Yalin's personal webpage
-baseurl: '' # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: 'https://yalinli.me' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: atyalinli
 github_username:  yalinli2
@@ -29,7 +29,8 @@ plugins:
   - jekyll-feed
 sass:
   sass_dir: _sass
-include: [_pages']
+include: 
+  - '_pages'
 kramdown:
   input: GFM
 
